Bug #25090 Incorrect handling of execute(Commit, AO_IgnoreError), can lead to DBTC crash
Submitted: 15 Dec 2006 11:11 Modified: 28 Dec 2006 15:36
Reporter: Jonas Oreland
Status: Closed
Category:Server: NDBAPI Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:
Assigned to: Jonas Oreland Target Version:

[15 Dec 2006 11:11] Jonas Oreland
Description:
 

How to repeat:
 

Suggested fix:
[15 Dec 2006 12:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17040

ChangeSet@1.2278, 2006-12-15 12:37:55+01:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#25090
    make sure apicon timer is reset when setting CS_CONNECTED
[15 Dec 2006 13:32] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17048

ChangeSet@1.2279, 2006-12-15 13:31:31+01:00, jonas@perch.ndb.mysql.com +2 -0
  ndb - bug#25090
    add testcase
[28 Dec 2006 15:36] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.0.34 & and 5.1.15 changelogs.