ndb - bug#25090   make sure apicon timer is reset when setting CS_CONNECTED